# ai-enterprise-search

./: .env.example  .gitignore  DEMO_SCRIPT.md  QUICKSTART_RAG.md  README.md  UPGRADE_GUIDE.md  WOW_EFFECT_ANALYSIS.md  ctf_solve.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-numpy1.txt  requirements.txt  test.ipynb
.github/workflows/: ci.yml  test-status.md
config/postgres/: init.sql
config/prometheus/: prometheus.yml
docker/: Dockerfile.api  Dockerfile.worker
docs/: CI_FIXES.md  EXECUTIVE_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_TESTING_GUIDE.md  README.md  VP_DEMO_GAP_ANALYSIS.md  VP_DEMO_ROADMAP.md  VP_DEMO_SCRIPT.md
docs/archive/: CI_CD_SETUP.md  IMPLEMENTATION_GUIDE.md  TESTING.md
scripts/: generate_mock_data.py  init_indices.py  load_mock_data.py  test_rag.py  test_recommendations.py  validate_recommendations.py  validate_tests.py
src/: __init__.py
src/api/: main.py
src/api/routes/: analytics.py  auth.py  health.py  ingest.py  rag.py  recommendations.py  search.py
src/core/: config.py  database.py  security.py
src/models/: __init__.py  analytics.py  auth.py  documents.py  rag.py  recommendations.py  search.py
src/services/: embedding_service.py  ingest_service.py  llm_service.py  opensearch_service.py  rag_service.py  recommendation_service.py  search_service.py
src/utils/: document_parser.py  text_processing.py
tests/: __init__.py  conftest.py  test_recommendation_service.py
tests/fixtures/: sample_data.py
tests/integration/: test_auth_api.py  test_health_api.py
tests/unit/: test_models.py  test_security.py  test_text_processing.py
ui/templates/: index.html
